[gd_scene load_steps=3 format=1]

[ext_resource path="res://Debuggers/SlimeDebugger.gd" type="Script" id=1]
[ext_resource path="res://Utils/Fonts/SFCartoonistHand/SFCartoonistHand-Bold.fnt" type="BitmapFont" id=2]

[node name="slime_debugger" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="health_label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -180.0
margin/top = -197.0
margin/right = -42.0
margin/bottom = -163.0
custom_fonts/font = ExtResource( 2 )
text = "Health:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="element_label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -180.0
margin/top = -165.0
margin/right = -42.0
margin/bottom = -131.0
custom_fonts/font = ExtResource( 2 )
text = "Element:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="state_label" type="Label" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 200.0
margin/top = 152.0
margin/right = 71.0
margin/bottom = 115.0
custom_fonts/font = ExtResource( 2 )
text = "State:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="anim_label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 80.0
margin/top = -197.0
margin/right = 261.0
margin/bottom = -164.0
custom_fonts/font = ExtResource( 2 )
text = "Anim:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="atk_state_label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 80.0
margin/top = -165.0
margin/right = 261.0
margin/bottom = -132.0
custom_fonts/font = ExtResource( 2 )
text = "Attack:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="linear_velocity_label" type="Label" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -60.0
margin/top = 152.0
margin/right = -162.0
margin/bottom = 88.0
custom_fonts/font = ExtResource( 2 )
text = "Velocity:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


